--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-hello
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Pinbols.lv</title>
+</head>
+<body>
+
+<h1>Pinbols.lv</h1>
+<p>Drīzumā</p>
+
+</body>
+</html>
