--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     <div class="section" id="what-is-pinball">
         <h2>KAS IR PINBALL?</h2>
         <p>Pinbols (pinball) ir jautra elektro-mehāniska spēle, kurā spēlētāji izmanto slēdžus (flipperus), lai vadītu metāla bumbiņu pa spēles laukumu, cenšoties noturēt to spēlē un gūt pēc iespējas vairāk punktu, kad tā trāpa dažādos mērķus un šķēršļus. Tā ir aizraujoša izklaide visai ģimenei, kuras saknes meklējamas 1930. gados, kad tika izstrādātas pirmās mehāniskās spēļu automāti.</p>
-        <img src="https://your-image-url-here.com/pinball-machine.jpg" alt="Pinball Machine">
+        <img src="https://github.com/agrisdul/pinbols.lv/blob/main/img/pinball.png" alt="Pinball Machine">
         <a href="#pinball-history" class="btn">Pinball Vēsture</a>
     </div>
     <div class="section" id="how-to-play-pinball">
@@ -98,7 +98,7 @@
             <li>Sekojot spēles uzdevumiem jāatklāj jauni līmeņi.</li>
             <li>Visbeidzot jānokļūst "Wizard Mode", kas spēles maksimālais līmenis.</li>
         </ul>
-        <img src="https://your-image-url-here.com/playing-pinball.jpg" alt="Playing Pinball">
+        <img src="https://github.com/agrisdul/pinbols.lv/blob/main/img/players.png" alt="Playing Pinball">
         <a href="#learn-more" class="btn">Lasīt Vairāk</a>
     </div>
 </body>
