--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 <body>
     <div class="navbar">
         <a href="#home">Sākums</a>
-        <a href="#store">Veikals</a>
+        <a href="#store">Pirkt Pinball</a>
         <a href="#arena">Pinball Arena</a>
         <a href="#service">Serviss</a>
         <a href="#events">Pasākumi</a>
