--- a/index.html
+++ b/index.html
@@ -1,9 +1,29 @@
 <!DOCTYPE html>
 <html lang="lv">
 <head>
+<!-- Primary Meta Tags -->
+<title>Pinball Arena - Nāc spēlēt. Pasākumi, izklaidei draugiem un ģimenei. </title>
+<meta name="title" content="Pinball Arena - Nāc spēlēt. Pasākumi, izklaidei draugiem un ģimenei. " />
+<meta name="description" content="Pinball (pinbols) ir jautra elektro-mehāniska spēle, kurā spēlētājam jāiegūst pēc iespējas vairāk punkti. Gan retro gan modernas spēles." />
+
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://pinbols.lv/" />
+<meta property="og:title" content="Pinball Arena - Nāc spēlēt. Pasākumi, izklaidei draugiem un ģimenei. " />
+<meta property="og:description" content="Pinball (pinbols) ir jautra elektro-mehāniska spēle, kurā spēlētājam jāiegūst pēc iespējas vairāk punkti. Gan retro gan modernas spēles." />
+<meta property="og:image" content="/img/pinball-arena.png" />
+
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image" />
+<meta property="twitter:url" content="https://pinbols.lv/" />
+<meta property="twitter:title" content="Pinball Arena - Nāc spēlēt. Pasākumi, izklaidei draugiem un ģimenei. " />
+<meta property="twitter:description" content="Pinball (pinbols) ir jautra elektro-mehāniska spēle, kurā spēlētājam jāiegūst pēc iespējas vairāk punkti. Gan retro gan modernas spēles." />
+<meta property="twitter:image" content="/img/pinball-arena.png" />
+
+<!-- Meta Tags Generated with https://metatags.io -->
+    
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pinbols.lv</title>
     <style>
         body {
             font-family: Arial, sans-serif;
