--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="lv">
 <head>
 <!-- Primary Meta Tags -->
-<title>Pinball Arena - Nāc spēlēt. Pasākumi, izklaidei draugiem un ģimenei. </title>
+<title>Pinball Arena - Nāc spēlēt. Pasākumi, izklaide draugiem un ģimenei. </title>
 <meta name="title" content="Pinball Arena - Nāc spēlēt. Pasākumi, izklaidei draugiem un ģimenei. " />
 <meta name="description" content="Pinball (pinbols) ir jautra elektro-mehāniska spēle, kurā spēlētājam jāiegūst pēc iespējas vairāk punkti. Gan retro gan modernas spēles." />
 
