--- a/pamati.html
+++ b/pamati.html
@@ -99,6 +99,7 @@
         <a href="#store">Pirkt Pinball</a>
         <a href="#arena">Pinball Arena</a>
         <a href="#service">Serviss</a>
+        <a href="/pamati.html">Pinball 101</a>
         <a href="#events">Pasākumi</a>
     </div>
     <div class="header">
