--- a/index.html
+++ b/index.html
@@ -95,10 +95,11 @@
 </head>
 <body>
     <div class="navbar">
-        <a href="#home">Sākums</a>
+        <a href="/index.html">Sākums</a>
         <a href="#store">Pirkt Pinball</a>
         <a href="#arena">Pinball Arena</a>
         <a href="#service">Serviss</a>
+        <a href="/pamati.html">Pinball 101</a>
         <a href="#events">Pasākumi</a>
     </div>
     <div class="header">
