--- a/pamati.html
+++ b/pamati.html
@@ -99,7 +99,7 @@
         <a href="#store">Pirkt Pinball</a>
         <a href="#arena">Pinball Arena</a>
         <a href="#service">Serviss</a>
-        <a href="/pamati.html">Pinball 101</a>
+        <a href="/pamati.html">Pinball Pamati</a>
         <a href="#events">Pasākumi</a>
     </div>
     <div class="header">
@@ -110,20 +110,17 @@
         <p>Lai iemācītos spēlēt pinball sākumā ir nepieciešams saprast un apgūt dažādu mehānismu nosaukumus.</p>
             <ul class="list">
                 <li><b>Rollover</b> - Slēdži, kuri aktivizējas tiklīdz bumba tiem pārripo pāri.</li>
-                <li>Spinner - Bumba trāpot šī mērķa plakanai daļai iegriež spineri, kurš griežoties skaita punktus.</li>
-                <li>Scoop - Bumba trāpot šajā kabatā, pārvietojas zem spēļu laukuma līdz tiek izmesta noteiktā vietā atpakaļ uz laukuma virsmas.</li>
-                <li>Drop target - Trāpot šim mērķim tas tiek "nosists" lejā zem laukuma. Atkārtoti to nav iespējams nosist, līdz tas atkal ir aktivizēts. Mērķi var būt vairāki vai viens.</li>
-                <li>Standups - Nekustīgi mērķi, kas atrodas uz laukuma virsmas. Tie tiek aktivizēti tiklīdz tiem trāpa ar bumbu.</li>
-                <li>Pop bumper - Mehānisms, kurš reaģē uz tuvumā esošo bumbu un aizsit to pretējā virzienā.</li>
-                <li>Inserts - Dažādas formas, krāsaini vai caurspīdīgi plastmasas gaismekļi, kas norāda uz spēles mērķiem vai progresu.</li>
-                <li>Slingshot - Mehānisms, kas reaģē uz bumbu un tiklīdz tā pieskarās slēdzim pie gumijas virza to pretējā virzienā. </li>
-                <li>Flipper - Lāpstiņas ar kuru palīdzību spēlētājs atsit, bumbu un kontrolē spēles gaitu.</li>
-                <li>Trough - Glabātuve, kurā nonāk un atrodas bumbas. Tiklīdz bumba ir nepieciešama spēlē. Trough izmet bumbu spēles laukumā.</li>
+                <li><b>Spinner</b> - Bumba trāpot šī mērķa plakanai daļai iegriež spineri, kurš griežoties skaita punktus.</li>
+                <li><b>Scoop</b> - Bumba trāpot šajā kabatā, pārvietojas zem spēļu laukuma līdz tiek izmesta noteiktā vietā atpakaļ uz laukuma virsmas.</li>
+                <li><b>Drop target</b> - Trāpot šim mērķim tas tiek "nosists" lejā zem laukuma. Atkārtoti to nav iespējams nosist, līdz tas atkal ir aktivizēts. Mērķi var būt vairāki vai viens.</li>
+                <li><b>Standups</b> - Nekustīgi mērķi, kas atrodas uz laukuma virsmas. Tie tiek aktivizēti tiklīdz tiem trāpa ar bumbu.</li>
+                <li><b>Pop bumper</b> - Mehānisms, kurš reaģē uz tuvumā esošo bumbu un aizsit to pretējā virzienā.</li>
+                <li><b>Inserts</b> - Dažādas formas, krāsaini vai caurspīdīgi plastmasas gaismekļi, kas norāda uz spēles mērķiem vai progresu.</li>
+                <li><b>Slingshot</b> - Mehānisms, kas reaģē uz bumbu un tiklīdz tā pieskarās slēdzim pie gumijas virza to pretējā virzienā. </li>
+                <li><b>Flipper</b> - Lāpstiņas ar kuru palīdzību spēlētājs atsit, bumbu un kontrolē spēles gaitu.</li>
+                <li><b>Trough</b> - Glabātuve, kurā nonāk un atrodas bumbas. Tiklīdz bumba ir nepieciešama spēlē. Trough izmet bumbu spēles laukumā.</li>
             </ul>
         <img src="/img/Playfield-diagram.png" alt="Pinball diagram">
-        <a href="#pinball-history" class="btn">Pinball Vēsture</a>
-        <p>
-        </p>
     </div>
     <div class="section" id="how-to-play-pinball">
         <h2>KĀ SPĒLĒT PINBALL?</h2>
