--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         <a href="/index.html">Sākums</a>
         <a href="#store">Pirkt Pinball</a>
         <a href="#arena">Pinball Arena</a>
-        <a href="#service">Serviss</a>
+        <a href="/serviss.html">Serviss</a>
         <a href="/pamati.html">Pinball Pamati</a>
         <a href="#events">Pasākumi</a>
     </div>
