--- a/pamati.html
+++ b/pamati.html
@@ -107,6 +107,7 @@
     </div>
     <div class="section" id="what-is-pinball">
         <h2>Pinball Pamati</h2>
+        <h3>1. Mehnānismi</h3>
         <p>Lai iemācītos spēlēt pinball sākumā ir nepieciešams saprast un apgūt dažādu mehānismu nosaukumus.</p>
             <ul class="list">
                 <li><b>Rollover</b> - Slēdži, kuri aktivizējas tiklīdz bumba tiem pārripo pāri.</li>
