--- a/index.html
+++ b/index.html
@@ -103,7 +103,11 @@
         <a href="#events">Pasākumi</a>
     </div>
     <div class="header">
-        <h1>PINBOLS.LV</h1>
+        <h1>    
+            <a href="/" title="Pinbols.lv">
+      <img src="/img/pinbols-logo.svg" alt="pinbols.lv">
+    </a>
+        </h1>
     </div>
     <div class="section" id="what-is-pinball">
         <h2>KAS IR PINBALL?</h2>
