--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     <div class="header">
         <h1>    
             <a href="/" title="Pinbols.lv">
-      <img src="/img/pinbols-logo.svg" alt="pinbols.lv">
+      <img src="/img/pinbols-logo.svg" alt="pinbols.lv" width="100" height="auto">
     </a>
         </h1>
     </div>
