--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="lv">
 <head>
 <!-- Primary Meta Tags -->
-<title>Pinball Arena - Nāc spēlēt. Pasākumi, izklaide draugiem un ģimenei. </title>
+<title>Pinbols.lv - Nāc spēlēt. Pasākumi, izklaide draugiem un ģimenei. </title>
 <meta name="title" content="Pinball Arena - Nāc spēlēt. Pasākumi, izklaidei draugiem un ģimenei. " />
 <meta name="description" content="Pinball (pinbols) ir jautra elektro-mehāniska spēle, kurā spēlētājam jāiegūst pēc iespējas vairāk punkti. Gan retro gan modernas spēles." />
 
@@ -105,7 +105,7 @@
     <div class="header">
         <h1>    
             <a href="/" title="Pinbols.lv">
-      <img src="/img/pinbols-logo.svg" alt="pinbols.lv" width="100" height="auto">
+      <img src="/img/pinbols-logo.svg" alt="pinbols.lv" width="250" height="auto">
     </a>
         </h1>
     </div>
