--- a/index.html
+++ b/index.html
@@ -103,11 +103,7 @@
         <a href="#events">Pasākumi</a>
     </div>
     <div class="header">
-        <h1>    
-            <a href="/" title="Pinbols.lv">
-      <img src="/img/pinbols-logo.svg" alt="pinbols.lv" width="250" height="auto">
-    </a>
-        </h1>
+        <h1>Pinbols.lv</h1>
     </div>
     <div class="section" id="what-is-pinball">
         <h2>KAS IR PINBALL?</h2>
