--- a/bars.html
+++ b/bars.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pinball for Bars & Venues</title>
+    <title>Pinbols Bāriem un Pasākumu vietām</title>
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <style>
         body {
@@ -85,68 +85,68 @@
 <body>
     <header>
         <nav>
-            <a href="#">HOME</a>
-            <a href="#">SHOP</a>
+            <a href="#">Sākums</a>
+            <a href="#">Veikals</a>
             <a href="#">PINBALL ARENA</a>
-            <a href="#">SERVICE</a>
-            <a href="#">EVENTS</a>
+            <a href="#">Serviss</a>
+            <a href="#">Pasākumi</a>
         </nav>
     </header>
 
     <main>
-        <h1 class="main-title">Pinball for Bars & Venues</h1>
+        <h1 class="main-title">Pinbols Bāriem un Pasākumu vietām</h1>
 
         <section class="content">
-            <h2 style="color: #FFFFFF;">Why Add Pinball to Your Venue?</h2>
-            <p>As the only pinball distributor in the country, I’m offering an exclusive opportunity to boost your business with a brand new experience! Our 70/30 income split makes it easy for you to add fun and increase customer engagement. Here are the benefits:</p>
+            <h2 style="color: #FFFFFF;">Kāpēc pievienot Pinball savā telpā?</h2>
+            <p>Kā vienīgais pinbola izplatītājs valstī mēs piedāvājam ekskluzīvu iespēju veicināt jūsu biznesu ar pavisam jaunu pieredzi! Mūsu 70/30 ienākumu sadalījums ļauj jums viegli pievienot jautrības un palielināt klientu iesaisti. Lūk, priekšrocības:</p>
 
             <div class="benefits">
                 <div class="benefit">
                     <img src="https://img.icons8.com/ios-filled/50/FF69B4/money-bag.png" alt="Extra Revenue">
-                    <h3>Extra Revenue</h3>
-                    <p>Earn extra income without any upfront costs.</p>
+                    <h3>Papildu ieņēmumi</h3>
+                    <p>Gūstiet papildu ienākumus bez sākotnējām izmaksām.</p>
                 </div>
                 <div class="benefit">
                     <img src="https://img.icons8.com/ios-filled/50/FF69B4/beer.png" alt="Customer Engagement">
-                    <h3>Customer Engagement</h3>
-                    <p>Pinball keeps customers entertained, encouraging longer stays.</p>
+                    <h3>Klientu piesaistīšana</h3>
+                    <p>Pinbols izklaidē apmeklētājus, tādējādi veicinot ilgāku uzturēšanos.</p>
                 </div>
                 <div class="benefit">
                     <img src="https://img.icons8.com/ios-filled/50/FF69B4/clock.png" alt="Low Maintenance">
-                    <h3>Low Maintenance</h3>
-                    <p>We handle all machine maintenance so you don’t have to.</p>
+                    <h3>Viegla uzturēšana</h3>
+                    <p>Mēs veicam visu mašīnu apkopi, lai jums tas nebūtu jādara.</p>
                 </div>
                 <div class="benefit">
                     <img src="https://img.icons8.com/ios-filled/50/FF69B4/gift.png" alt="Unique Experience">
-                    <h3>Unique Experience</h3>
-                    <p>Offer something unique that sets your venue apart.</p>
+                    <h3>Unikāla pieredze</h3>
+                    <p>Piedāvājiet kaut ko unikālu, kas izceļ jūsu pasākuma vietu.</p>
                 </div>
                 <div class="benefit">
                     <img src="https://img.icons8.com/ios-filled/50/FF69B4/graph.png" alt="Increased Foot Traffic">
-                    <h3>Increased Foot Traffic</h3>
-                    <p>Attract new customers interested in classic arcade fun.</p>
+                    <h3>Lielāka apmeklētāju plūsma</h3>
+                    <p>Piesaistiet jaunus klientus, kas interesējas par klasiskām arkādes izklaidēm.</p>
                 </div>
                 <div class="benefit">
                     <img src="https://img.icons8.com/ios-filled/50/FF69B4/multiple-devices.png" alt="Social Media Buzz">
-                    <h3>Social Media Buzz</h3>
-                    <p>Pinball is a popular photo-op for social sharing.</p>
+                    <h3>Sociālo mediju uzmanība</h3>
+                    <p>Pinbols ir iecienīts fotoattēlu koplietošanas veids sociālajos tīklos.</p>
                 </div>
             </div>
         </section>
 
         <section class="content contact-form">
-            <h2 style="color: #FF69B4;">Contact Me to Get Started</h2>
-            <form action="mailto:agris@dna.lv" method="post" enctype="text/plain">
-                <label for="name">Name</label>
+            <h2 style="color: #FF69B4;">Sazinieties ar mums, lai uzsāktu sadarbību.</h2>
+            <form action="mailto:agris@pinbols.lv" method="post" enctype="text/plain">
+                <label for="name">Vārds</label>
                 <input type="text" id="name" name="name" required>
 
-                <label for="email">Email</label>
+                <label for="email">E-pasts</label>
                 <input type="email" id="email" name="email" required>
 
-                <label for="message">Message</label>
+                <label for="message">Teksts</label>
                 <textarea id="message" name="message" rows="4" required></textarea>
 
-                <button type="submit" class="submit-button">Send Message</button>
+                <button type="submit" class="submit-button">Nosūtīt</button>
             </form>
         </section>
     </main>
