--- a/bars.html
+++ b/bars.html
@@ -85,11 +85,12 @@
 <body>
     <header>
         <nav>
-            <a href="#">Sākums</a>
-            <a href="#">Veikals</a>
-            <a href="#">PINBALL ARENA</a>
-            <a href="#">Serviss</a>
-            <a href="#">Pasākumi</a>
+        <a href="/index.html">Sākums</a>
+        <a href="#store">Pirkt Pinball</a>
+        <a href="#arena">Pinball Arena</a>
+        <a href="/serviss.html">Serviss</a>
+        <a href="/pamati.html">Pinball Pamati</a>
+        <a href="#events">Pasākumi</a>
         </nav>
     </header>
 
