--- a/bars.html
+++ b/bars.html
@@ -116,7 +116,7 @@
         <h1 class="main-title">Pinbols Bāriem un Pasākumu vietām</h1>
 
         <section class="content">
-            <h2 style="color: #FFFFFF;">Kāpēc pievienot Pinball savā telpā?</h2>
+            <h2 style="color: #FFFFFF;">Kāpēc pievienot pinball savā Bārā?</h2>
             <p>Kā vienīgais pinbola izplatītājs valstī mēs piedāvājam ekskluzīvu iespēju veicināt jūsu biznesu ar pavisam jaunu pieredzi! Mūsu 70/30 ienākumu sadalījums ļauj jums viegli pievienot jautrības un palielināt klientu iesaisti. Lūk, priekšrocības:</p>
 
             <div class="benefits">
@@ -156,7 +156,7 @@
         <section class="gallery">
             <h2>Pinball in Action: Bars & Venues</h2>
             <div class="gallery-images">
-                <img src="#" alt="Pinball machine in bar 1">
+                <img src="#" alt="https://images.unsplash.com/photo-1629522244807-aaf9b811339d?q=80&w=2940&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D">
                 <img src="#" alt="Pinball machine in bar 2">
                 <img src="#" alt="Pinball machine in bar 3">
                 <img src="#" alt="Pinball machine in bar 4">
