--- a/index.html
+++ b/index.html
@@ -135,8 +135,8 @@
     </div>
 <footer>
     <p>PINBOLS.LV 2024.</p>
-    <p>📞 Phone: +371 123 4567</p>
-    <p>✉️ Email: <a href="mailto:agris@dna.lv" style="color: #FF69B4; text-decoration: none;">agris@dna.lv</a></p>
+    <p>📞 Phone: +371 277 48 122</p>
+    <p>✉️ Email: <a href="mailto:a@pinbols.lv" style="color: #FF69B4; text-decoration: none;">a @ pinbols.lv</a></p>
 </footer>
 </body>
 </html>
