--- a/pamati.html
+++ b/pamati.html
@@ -91,6 +91,17 @@
         .list li {
             margin: 10px 0;
         }
+        footer {
+            margin-top: 40px;
+            padding: 20px 0;
+            background-color: #000000;
+            color: #FF00FF;
+            font-size: 0.9em;
+        }
+
+        footer p {
+            margin: 5px 0;
+        }
     </style>
 </head>
 <body>
@@ -134,5 +145,11 @@
         <img src="/img/player1.png" alt="Playing Pinball">
         <a href="#learn-more" class="btn">Lasīt Vairāk</a>
     </div>
+
+<footer>
+    <p>PINBOLS.LV 2024.</p>
+    <p>📞 Phone: +371 277 48 122</p>
+    <p>✉️ Email: <a href="mailto:a@pinbols.lv" style="color: #FF69B4; text-decoration: none;">a @ pinbols.lv</a></p>
+</footer>
 </body>
 </html>
