--- a/serviss.html
+++ b/serviss.html
@@ -91,6 +91,17 @@
         .list li {
             margin: 10px 0;
         }
+        footer {
+            margin-top: 40px;
+            padding: 20px 0;
+            background-color: #000000;
+            color: #FF00FF;
+            font-size: 0.9em;
+        }
+
+        footer p {
+            margin: 5px 0;
+        }
     </style>
 </head>
 <body>
