--- a/serviss.html
+++ b/serviss.html
@@ -141,5 +141,10 @@
         <img src="/img/player1.png" alt="Playing Pinball">
         <a href="#learn-more" class="btn">Lasīt Vairāk</a>
     </div>
+    <footer>
+    <p>PINBOLS.LV 2024.</p>
+    <p>📞 Phone: +371 277 48 122</p>
+    <p>✉️ Email: <a href="mailto:a@pinbols.lv" style="color: #FF69B4; text-decoration: none;">a @ pinbols.lv</a></p>
+</footer>
 </body>
 </html>
