--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     <div class="section" id="what-is-pinball">
         <h2>KAS IR PINBALL?</h2>
         <p>Pinbols (Pinball) ir jautra elektro-mehāniska spēle, kurā spēlētāji izmanto fliperus (flipper, jeb lāpstiņas), lai vadītu metāla bumbiņu pa spēles laukumu, cenšoties noturēt to spēlē un gūt pēc iespējas vairāk punktu, kad tā trāpa dažādos mērķus un šķēršļus. Tā ir aizraujoša izklaide visai ģimenei, kuras saknes meklējamas 1930. gados, kad tika izstrādāti pirmie mehāniskie spēļu automāti.</p>
-        <img src="/img/pinball1.png" alt="Pinball Machine">
+        <img src="/img/vesture.svg" alt="Pinball Machine">
         <a href="#pinball-history" class="btn">Pinball Vēsture</a>
     </div>
     <div class="section" id="how-to-play-pinball">
