--- a/serviss.html
+++ b/serviss.html
@@ -2,7 +2,7 @@
 <html lang="lv">
 <head>
 <!-- Primary Meta Tags -->
-<title>Pinbols.lv - Pinball serviss un apkope</title>
+<title>Pinbols.lv - Pinball serviss un apkope Latvijā</title>
 <meta name="title" content="Pinbols.lv - Pinball serviss un apkope" />
 <meta name="description" content="Pinbols.lv - Pinball aparātu serviss un apkope un remonts. Mēs labojam un apkopjam pinball aparātus Latvijā." />
 
@@ -142,7 +142,7 @@
         <a href="#learn-more" class="btn">Lasīt Vairāk</a>
     </div>
     <footer>
-    <p>PINBOLS.LV 2024.</p>
+    <p>PINBOLS.LV 2024. Latvija</p>
     <p>✉️ Email: <a href="mailto:a@pinbols.lv" style="color: #FF69B4; text-decoration: none;">a @ pinbols.lv</a></p>
 </footer>
 </body>
