--- a/index.html
+++ b/index.html
@@ -135,7 +135,9 @@
     </div>
 <footer>
     <p>PINBOLS.LV 2024.</p>
-    <p>✉️ Email: <a href="mailto:a@pinbols.lv" style="color: #FF69B4; text-decoration: none;">a @ pinbols.lv</a></p>
+    <p>✉️ Kontakti: <a href="mailto:a@pinbols.lv" style="color: #FF69B4; text-decoration: none;">a @ pinbols.lv</a></p>
+    <p>Youtube: <a href="https://www.youtube.com/@Pinbols" style="color: #FF69B4; text-decoration: none;">Youtube/ Pinbols</a></p>
+    <p>Twitch: <a href="https://www.twitch.tv/pinbols" style="color: #FF69B4; text-decoration: none;">Twitch/ Pinbols</a></p>
 </footer>
 </body>
 </html>
