--- a/index.html
+++ b/index.html
@@ -116,6 +116,12 @@
     <div class="header">
         <h1>Pinbols.lv</h1>
     </div>
+        <div class="section" id="what-is-pinball">
+        <h2>Live Stream</h2>
+        <p>Mūsu mērķis ir popularizēt Pinbolu un palīdzēt citiem apgūt šo spēli. Ienāc, uzdod dažus jautājumus un kļūsti labāks spēlētājs!</p>
+        <iframe src="https://player.twitch.tv/?channel=pinbols&parent=pinbols.lv" frameborder="0" allowfullscreen="true" scrolling="no" height="378" width="620"></iframe>
+        <a href="https://www.youtube.com/@Pinbols" class="btn">Skaties Youtube</a><a href="https://www.twitch.tv/pinbols" class="btn">Skaties Twitch</a>
+    </div>
     <div class="section" id="what-is-pinball">
         <h2>KAS IR PINBALL?</h2>
         <p>Pinbols (Pinball) ir jautra elektro-mehāniska spēle, kurā spēlētāji izmanto fliperus (flipper, jeb lāpstiņas), lai vadītu metāla bumbiņu pa spēles laukumu, cenšoties noturēt to spēlē un gūt pēc iespējas vairāk punktu, kad tā trāpa dažādos mērķus un šķēršļus. Tā ir aizraujoša izklaide visai ģimenei, kuras saknes meklējamas 1930. gados, kad tika izstrādāti pirmie mehāniskie spēļu automāti.</p>
