--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         <h2>Live Stream</h2>
         <p>Mūsu mērķis ir popularizēt Pinbolu un palīdzēt citiem apgūt šo spēli. Ienāc, uzdod dažus jautājumus un kļūsti labāks spēlētājs!</p>
         <iframe src="https://player.twitch.tv/?channel=pinbols&parent=pinbols.lv" frameborder="0" allowfullscreen="true" scrolling="no" height="378" width="620"></iframe>
-        <br><a href="https://www.youtube.com/@Pinbols target="_blank" class="btn">Skaties Youtube</a><a href="https://www.twitch.tv/pinbols target="_blank" class="btn">Skaties Twitch</a>
+        <br><a href="https://www.youtube.com/@Pinbols" target="_blank" class="btn">Skaties Youtube</a><a href="https://www.twitch.tv/pinbols" target="_blank" class="btn">Skaties Twitch</a>
     </div>
     <div class="section" id="what-is-pinball">
         <h2>KAS IR PINBALL?</h2>
