--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         <a href="#events">Pasākumi</a>
     </div>
     <div class="header">
-        <h1>Pinbols.lv</h1>
+        <h1>pinbols.lv</h1>
     </div>
         <div class="section" id="what-is-pinball">
         <h2>Live Stream</h2>
