--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="lv">
 <head>
 <!-- Primary Meta Tags -->
-<title>Pinbols.lv - Nāc spēlēt. Pasākumi, izklaide draugiem un ģimenei. </title>
+<title>pinbols.lv - Nāc spēlēt. Pasākumi, izklaide draugiem un ģimenei. </title>
 <meta name="title" content="Pinball Arena - Nāc spēlēt. Pasākumi, izklaidei draugiem un ģimenei. " />
 <meta name="description" content="Pinball (pinbols) ir jautra elektro-mehāniska spēle, kurā spēlētājam jāiegūst pēc iespējas vairāk punkti. Gan retro gan modernas spēles." />
 
@@ -107,11 +107,11 @@
 <body>
     <div class="navbar">
         <a href="/index.html">Sākums</a>
-        <a href="#store">Pirkt Pinball</a>
+        <a href="/pirkt.html">Pirkt Pinball</a>
         <a href="#arena">Pinball Arena</a>
         <a href="/serviss.html">Serviss</a>
         <a href="/pamati.html">Pinball Pamati</a>
-        <a href="#events">Pasākumi</a>
+        <a href="/pasakumi.html">Pasākumi</a>
     </div>
     <div class="header">
         <h1>pinbols.lv</h1>
