--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="lv">
 <head>
 <!-- Primary Meta Tags -->
-<title>pinbols.lv - Nāc spēlēt. Pasākumi, izklaide draugiem un ģimenei. </title>
-<meta name="title" content="Pinball Arena - Nāc spēlēt. Pasākumi, izklaidei draugiem un ģimenei. " />
+<title>pinbols.lv - Iepazīsti pinball. Pinball ir iemaņu spēle.</title>
+<meta name="title" content="pinbols.lv - Iepazīsti pinball. Pinball ir iemaņu spēle." />
 <meta name="description" content="Pinball (pinbols) ir jautra elektro-mehāniska spēle, kurā spēlētājam jāiegūst pēc iespējas vairāk punkti. Gan retro gan modernas spēles." />
 
 <!-- Open Graph / Facebook -->
