--- a/pasakumi.html
+++ b/pasakumi.html
@@ -107,11 +107,12 @@
 <body>
     <div class="navbar">
         <a href="/index.html">Sākums</a>
-        <a href="#store">Pirkt Pinball</a>
+        <a href="/pirkt.html">Pirkt Pinball</a>
         <a href="#arena">Pinball Arena</a>
         <a href="/serviss.html">Serviss</a>
         <a href="/pamati.html">Pinball Pamati</a>
         <a href="/pasakumi.html">Pasākumi</a>
+        <a href="/diy.html">Uzbūvē VPinball</a>
     </div>
     <div class="header">
         <h1>pinbols.lv</h1>
