--- a/pirkt.html
+++ b/pirkt.html
@@ -112,6 +112,7 @@
         <a href="/serviss.html">Serviss</a>
         <a href="/pamati.html">Pinball Pamati</a>
         <a href="pasakumi.html">Pasākumi</a>
+        <a href="/diy.html">Uzbūvē VPinball</a>
     </div>
     <div class="header">
         <h1>pinbols.lv</h1>
