--- a/serviss.html
+++ b/serviss.html
@@ -107,14 +107,16 @@
 <body>
     <div class="navbar">
         <a href="/index.html">Sākums</a>
-        <a href="#store">Pirkt Pinball</a>
+        <a href="/pirkt.html">Pirkt Pinball</a>
         <a href="#arena">Pinball Arena</a>
         <a href="/serviss.html">Serviss</a>
         <a href="/pamati.html">Pinball Pamati</a>
-        <a href="#events">Pasākumi</a>
+        <a href="/pasakumi.html">Pasākumi</a>
+        <a href="/diy.html">Uzbūvē VPinball</a>
+        
     </div>
     <div class="header">
-        <h1>PINBOLS.LV</h1>
+        <h1>pinbols.lv</h1>
     </div>
     <div class="section" id="what-is-pinball">
         <h2>Pinball - remonts un apkope</h2>
