--- a/diy/index.html
+++ b/diy/index.html
@@ -29,11 +29,11 @@
             <h2>Step 2: Visual Demonstration</h2>
             <div class="slideshow-container">
                 <div class="slide">
-                    <img src="/52.PNG" alt="Image 1">
+                    <img src="52.PNG" alt="Image 1">
                     <p class="caption">Caption for Image 1</p>
                 </div>
                 <div class="slide">
-                    <img src="/14.JPG" alt="Image 2">
+                    <img src="14.JPG" alt="Image 2">
                     <p class="caption">Caption for Image 2</p>
                 </div>
             </div>
