--- a/diy/index.html
+++ b/diy/index.html
@@ -27,16 +27,19 @@
         <!-- Slideshow for Images -->
         <section>
             <h2>Step 2: Visual Demonstration</h2>
-            <div class="slideshow-container">
-                <div class="slide">
-                    <img src="52.PNG" alt="Image 1">
-                    <p class="caption">Caption for Image 1</p>
-                </div>
-                <div class="slide">
-                    <img src="14.JPG" alt="Image 2">
-                    <p class="caption">Caption for Image 2</p>
-                </div>
-            </div>
+<div class="slideshow-container">
+    <div class="slide">
+        <img src="14.JPG" alt="Image 1">
+        <p class="caption">Caption for Image 1</p>
+    </div>
+    <div class="slide">
+        <img src="52.PNG" alt="Image 2">
+        <p class="caption">Caption for Image 2</p>
+    </div>
+    <button onclick="previousSlide()">❮</button>
+    <button onclick="nextSlide()">❯</button>
+</div>
+
         </section>
     </main>
     
