--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
   <div class="instagram-embed">
     <!-- Replace this SnapWidget embed URL with your own -->
-    <iframe src="https://snapwidget.com/embed/123456" class="snapwidget-widget" allowtransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden; width:100%; height:500px"></iframe>
+    <iframe src="https://snapwidget.com/embed/1096098" class="snapwidget-widget" allowtransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden; width:100%; height:500px"></iframe>
   </div>
 
   <footer>
