--- a/index.html
+++ b/index.html
@@ -3,7 +3,21 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Pinball Arena - Live Stream</title>
+  <title>Pinball Arena — Pinball Live Stream, Machines & Events</title>
+  <meta name="description" content="Pinball Arena brings you live pinball streams, tournaments, and a wide catalog of modern and classic pinball machines. Join our events and shop online!">
+  <meta name="keywords" content="pinball, pinball stream, pinball arena, pinball machines, tournaments, arcade, Riga, Latvia, events, shop">
+  <meta name="author" content="Pinball Arena">
+
+  <!-- Open Graph for Social Sharing -->
+  <meta property="og:title" content="Pinball Arena — Pinball Live Stream & Tournaments" />
+  <meta property="og:description" content="Watch our live pinball stream, browse pinball machines, join events, and shop online. Discover the pinball scene in Latvia!" />
+  <meta property="og:image" content="https://pinballarena.lv/images/preview.jpg" /> <!-- Replace with your preview image -->
+  <meta property="og:url" content="https://pinballarena.lv" />
+  <meta name="twitter:card" content="summary_large_image" />
+
+  <!-- Style and other code remains the same -->
+
+  
   <style>
     body {
       margin: 0;
@@ -98,7 +112,7 @@
   <div class="links">
     <a href="https://pinballarena.lv/" target="_blank">🛒 Visit Our Shop</a>
     <a href="http://pinballarena.lv/store" target="_blank">📘 View Machine Catalog</a>
-    <a href="https://pinballarena.lv/events" target="_blank">📅 Upcoming Events</a>
+    <a href="https://www.pinballarena.lv/pinball-pasakumi" target="_blank">📅 Upcoming Events</a>
     <a href="https://www.instagram.com/pinballarenalv" target="_blank">📸 Instagram</a>
     <a href="https://www.facebook.com/pinballarena" target="_blank">📘 Facebook</a>
     <a href="https://www.youtube.com/@pinballarena" target="_blank">▶️ YouTube</a>
